feat: 调整商店数值和接口，与文档一致
